# disttranscode

./: .gitignore  CMakeLists.txt  README.md
cluster/: README.md  example.tfvars  main.tf
doc/: Architecture.org  cluster-setup.md
include/cmd/: ArgumentParser.hpp
include/data/: Filter.hpp  FilterArgumentParser.hpp  FilterFactory.hpp  FilterManager.hpp  Frame.hpp  Segment.hpp  Stream.hpp
include/ffmpeg/: FFMpegVideoEncoder.hpp  FFMpegVideoFrame.hpp  FFMpegVideoReader.hpp  FFMpegVideoSegment.hpp  FFMpegVideoStream.hpp  FFMpegVideoWriter.hpp  utils.hpp
include/frame/: BilinearInterpolation.hpp  FrameF.hpp  FrameGenerator.hpp  FrameGeneratorF.hpp
include/net/: Consensus.hpp  ConsensusFactory.hpp  Distribution.hpp  DistributionFactory.hpp  NodeComm.hpp  NodeContext.hpp  StrideDistribution.hpp  Synchronizer.hpp  UniformFloodingConsensus.hpp
include/video/: VideoReader.hpp  VideoWriter.hpp
scripts/: build_3rdparty.sh  deploy-to_cluster.sh  deploy_to_cluster.sh
src/: main.cpp
src/cmd/: ArgumentParser.cpp
src/data/: FilterManager.cpp  Frame.cpp  Segment.cpp
src/ffmpeg/: FFMpegVideoEncoder.cpp  FFMpegVideoFrame.cpp  FFMpegVideoReader.cpp  FFMpegVideoSegment.cpp  FFMpegVideoStream.cpp  FFMpegVideoWriter.cpp  utils.cpp
src/filters/black/: BlackFilter.cpp
src/filters/grayscale/: GrayscaleFilter.cpp
src/filters/resize/: ResizeFilter.cpp
src/frame/: BilinearInterpolation.cpp
src/net/: NodeComm.cpp  NodeContext.cpp  Synchronizer.cpp
test/: TestStrideDistribution.cpp  TestSynchronizer.cpp  TestUniformFloodingConsensus.cpp  main.cpp  mock_net.cpp  mock_net.hpp  mocks.hpp
utilities/: generate_test_file.cpp
